
[metadata]
name = yamja-renderer
version = 0.0.1rc1
author = P. H.
author_email = pip-yamja-renderer.perfide@safersignup.de
description = Jinja2 template renderer
long_description = file: README.md
url = https://github.com/perfide/yamja-renderer
keywords = jinja2, yaml
license = GNU General Public License v2 (GPLv2)
license_files = LICENSE
classifiers =
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5

[options]
zip_safe = True
include_package_data = False
packages = find:
scripts = yamja-renderer.py

# [EOF]
